examples/invalid/66_unknown_kind.lane
// Invalid: kind annotations use the closed Type and Effect vocabulary.

module Examples.Invalid.UnknownKind

type A : Banana = Int
